--- a/index.html
+++ b/index.html
@@ -94,13 +94,19 @@
 
     .reverb-slider-container {
       display: flex;
-      align-items: center;
+      flex-direction: column;
+      /* align-items: center; */
       gap: 1rem;
+
+      background-color: white;
+      border-radius: 10px;
+      padding: 0.75rem;
+      padding-top: 1rem;
     }
 
     .reverb-slider-label {
       flex: 1;
-      text-align: right;
+      text-align: left;
     }
 
     .slider {
@@ -118,6 +124,21 @@
       cursor: pointer;
       color: #133d19;
       font-family: "SF Mono", monospace;
+    }
+
+    .slider-description {
+      /* color: #888; */
+      /* background-color: #f5f5f5; */
+      font-family: "SF Pro Display", sans-serif;
+      letter-spacing: 0.5px;
+      /* opacity: 0.8; */
+      color: #5c5b5b;
+    }
+
+    .slider-title {
+      background-color: #f5f5f5;
+      padding: 5px 8px;
+      border-radius: 5px;
     }
   </style>
   <body>
@@ -166,7 +187,10 @@
 
     <div class="reverb-sliders">
       <div class="reverb-slider-container">
-        <div class="reverb-slider-label">Room Size</div>
+        <div class="reverb-slider-label">
+          <span class="slider-title">Room Size</span>
+          <span class="slider-description">Simulated room size</span>
+        </div>
         <input
           type="range"
           min="0"
@@ -176,7 +200,10 @@
         />
       </div>
       <div class="reverb-slider-container">
-        <div class="reverb-slider-label">Damping</div>
+        <div class="reverb-slider-label">
+          <span class="slider-title">Damping</span>
+          <span class="slider-description">Sound absorption amount</span>
+        </div>
         <input
           type="range"
           min="0"
@@ -186,7 +213,10 @@
         />
       </div>
       <div class="reverb-slider-container">
-        <div class="reverb-slider-label">Dry Level</div>
+        <div class="reverb-slider-label">
+          <span class="slider-title">Dry Level</span>
+          <span class="slider-description">Original signal strength</span>
+        </div>
         <input
           type="range"
           min="0"
@@ -196,7 +226,10 @@
         />
       </div>
       <div class="reverb-slider-container">
-        <div class="reverb-slider-label">Wet Level</div>
+        <div class="reverb-slider-label">
+          <span class="slider-title">Wet Level</span>
+          <span class="slider-description">Reverb effect strength</span>
+        </div>
         <input
           type="range"
           min="0"
@@ -206,7 +239,10 @@
         />
       </div>
       <div class="reverb-slider-container">
-        <div class="reverb-slider-label">Width</div>
+        <div class="reverb-slider-label">
+          <span class="slider-title">Width</span>
+          <span class="slider-description">Stereo field width</span>
+        </div>
         <input
           type="range"
           min="0"
@@ -216,11 +252,17 @@
         />
       </div>
       <div class="reverb-slider-container">
-        <div class="reverb-slider-label">Freeze</div>
+        <div class="reverb-slider-label">
+          <span class="slider-title">Freeze</span>
+          <span class="slider-description">Hold current reverb state</span>
+        </div>
         <input type="range" min="0" max="100" value="0" class="freeze slider" />
       </div>
       <div class="reverb-slider-container">
-        <div class="reverb-slider-label">Delay</div>
+        <div class="reverb-slider-label">
+          <span class="slider-title">Delay</span>
+          <span class="slider-description">Echo time offset</span>
+        </div>
         <input type="range" min="0" max="100" value="0" class="delay slider" />
       </div>
     </div>
