--- a/index.html
+++ b/index.html
@@ -181,6 +181,35 @@
         padding: 0 1.5rem;
       }
     }
+
+    input[type="range"] {
+      -webkit-appearance: none;
+      width: 100%;
+      height: 8px;
+      background: #efefef;
+      outline: none;
+      opacity: 0.7;
+      transition: opacity 0.2s;
+      border-radius: 10px;
+    }
+
+    input[type="range"]::-webkit-slider-thumb {
+      -webkit-appearance: none;
+      appearance: none;
+      width: 20px;
+      height: 20px;
+      background: #5046e5;
+      cursor: pointer;
+      border-radius: 50%;
+    }
+
+    input[type="range"]::-moz-range-thumb {
+      width: 20px;
+      height: 20px;
+      background: #5046e5;
+      cursor: pointer;
+      border-radius: 50%;
+    }
   </style>
   <body>
     <div class="drop-zone">
